--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <meta content="" name="keywords">
   <meta content="" name="description">
 
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/favicon.png" type="image/png" rel="icon">
 
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
